--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,26 @@
                 O maior envento de Tecnologia do Brasil começa em: 10d 12h 20m 15s
             </p>
         </div>
+        <div class="infos-bar">
+            <ul class="infos-bar__infos">
+                <li class="infos-bar__infos__item">
+                    <b>Localização</b>
+                    Allianz Parque - Barra Funda - São Paulo
+                </li>
+                <li class="infos-bar__infos__item">
+                    <b>Preço</b>
+                    A partir de R$ 120,00
+                </li>
+                <li class="infos-bar__infos__item">
+                    <b>Quando</b>
+                    12/12/2022 ás 19hrs
+                </li>
+            </ul>
+            <a href="#" class="button button--primary">
+                Garanta sua Vaga
+            </a>
+
+        </div>
 
 
     </header>
