--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
     <title>Ebac Tech Talks</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-        
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="styles/main.scss">
 </head>
 
@@ -18,7 +19,7 @@
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="Ebac Logo">
             <p class="hero__text">
-                O maior envento de Tecnologia do Brasil começa em: 10d 12h 20m 15s
+                O maior envento de Tecnologia do Brasil começa em: <span id="contador"></span>
             </p>
         </div>
         <div class="infos-bar">
@@ -33,7 +34,7 @@
                 </li>
                 <li class="infos-bar__infos__item">
                     <b>Quando</b>
-                    12/12/2022 ás 19hrs
+                    12/12/2024 ás 19hrs
                 </li>
             </ul>
             <a href="#" class="button button--primary">
@@ -44,6 +45,70 @@
 
 
     </header>
+    <section class="event event--frontend">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Front End</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Neque, dolor alias!
+                    Perspiciatis quos quis quasi ad eos quam
+                    eaque nulla reiciendis a soluta quod, maxime
+                    vel qui laborum, praesentium officiis.
+                    Perspiciatis quos quis quasi ad eos quam
+                    eaque nulla reiciendis a soluta quod, maxime
+                    vel qui laborum, praesentium officiis</p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="frontend">
+        </div>
+
+    </section>
+    <section class="event event--ux-ui event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">UI/UX</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+                    dolor alias! Perspiciatis quos quis quasi ad eos quam eaque nulla reiciendis a soluta quod, maxime
+                    vel qui laborum, praesentium officiis.</p>
+
+            </div>
+            <img class="event__image" src="./images/ui-ux.png" alt="ui-ux">
+        </div>
+
+    </section>
+    <section class="event event--data-sciencie ">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Data-Sciencie</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+                    dolor alias! Perspiciatis quos quis
+                    quasi ad eos quam eaque nulla reiciendis a soluta
+                    quod, maxime vel qui laborum, praesentium officiis. Perspiciatis quos quis quasi ad eos quam
+                    eaque nulla reiciendis a soluta quod, maxime
+                    vel qui laborum, praesentium officiis</p>
+
+            </div>
+            <img class="event__image" src="./images/data.png" alt="Data-Sciencie">
+        </div>
+
+    </section>
+    <section class="event event--backend event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">Back-End</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+                    dolor alias! Perspiciatis quos quis
+                    quasi ad eos quam eaque nulla reiciendis a soluta quod,
+                    maxime vel qui laborum, praesentium officiis.
+                    Perspiciatis quos quis quasi ad eos quam
+                    eaque nulla reiciendis a soluta quod, maxime
+                    vel qui laborum, praesentium officiis</p>
+
+            </div>
+            <img class="event__image" src="./images/backend.png" alt="backend">
+        </div>
+
+    </section>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 
